--- a/company/templates/index.html
+++ b/company/templates/index.html
@@ -1,65 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-      crossorigin="anonymous"></script>
+{% extends "base.html" %}
 
-    <title>Bootstrap demo</title>
+{% block content %}
+{% load static %}
 
-    <style>
-      ul li {
-        border-bottom: 1px solid #a0a0a0;
-        padding: 5px;
-        margin-bottom: 10px;
-      }
+<style>
 
-    </style>
-  </head>
-  <body>
-    
-    <!-- NAVBAR -->
-    <nav class="navbar bg-body-tertiary fixed-top" style="background-color: #EEDC82 !important;">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Offcanvas navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" style="background-color: #EEDC82 !important;" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-          </div>
-        
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-            </ul>
-
-          </div>
-        </div>
-      </div>
-    </nav>
-
-  </body>
-</html>
+  .centertext{
+    position: fixed;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: center;
+            text-shadow: 2px 2px 0px #fa8321;
+}
+.imagemain{
+  margin-top:5%;
+  width: 100%;
+  height: 90vh;
+   
+}
+</style>
+  <div class="maintext">
+    <img class="imagemain" src="{% static 'main.png' %}"/>
+  </div>
+  <div>
+    <p style="color:black !important; margin:10px; padding: 10px; font-family:GT Flexa Medium !important">Across the world, a staggering amount of people are eating their food with single-use plastic utensils 
+      but why do we use something just for few minutes if it's gonna take hundreds of years to decompose. 
+      That's the moment on the lips but a lifetime in a landfill</p>
+  </div>
+{% endblock %}
