--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -32,6 +32,10 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style>
+      html, body{
+        max-width: 100%;
+        overflow-x: hidden !important;
+      }
       ul li {
         border-bottom: 1px solid white;
         padding: 5px;
