--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -29,9 +29,11 @@
       rel="stylesheet"
       id="bootstrap-css"
     />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <style>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+      <style>
       html, body{
         max-width: 100%;
         overflow-x: hidden !important;
@@ -118,8 +120,9 @@
     display: inline-grid;
     grid-template-columns: 1fr 1fr 1fr;
   "
+  class="footer"
 >
-  <div style="float: left; width: 78%; margin-left: 5%;">
+  <div style="float: left; width: 78%; margin-left: 5%;" >
     <br /><br />
     <b
       >Incredible Eats is on a mission to remove plastic waste from the
