--- a/company/templates/pestle.html
+++ b/company/templates/pestle.html
@@ -37,7 +37,66 @@
     
   </style>
   <div>
-    <div style="height: 65px; padding-bottom: 25%; background-color: #eae7ce; margin-top: 3%;" class="row">
+    <p style="margin-top:6%; margin-left: 2%;"><strong style="color:#fa8321 !important; font-size:xx-large; ">EXPLORING AND MITIGATING...</strong> </p>
+  </div>
+  <div style="display: grid; grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; ">
+    <div style="background-color: #ffc10740;">
+    
+      <div style="margin-top:15%; text-align:center;;">
+  <strong style="color:#ffc107 !important; font-size: xx-large;">POLITICAL FACTORS</strong>
+  <br>
+  <img src="{% static 'political.png' %}" style="width:50%"/>
+</div>      
+    </div>
+    <div style="background-color: #acedfa70;">
+
+      <div style="margin-top:15%; text-align:center;;">
+        <strong style="color:#0dcaf0 !important; font-size: xx-large;">ECONOMIC FACTORS</strong>
+        <br>
+        <img src="{% static 'economic.png' %}" style="width:50%"/>
+      </div> 
+
+    </div>
+    <div style="background-color: #faadb5;">
+      <div style="margin-top:15%; text-align:center;;">
+        <strong style="color:#dc3545 !important; font-size: xx-large;">SOCIAL FACTORS</strong>
+        <br>
+        <img src="{% static 'social.png' %}" style="width:50%"/>
+      </div> 
+    </div>
+    <div style="background-color: #a9cff7;">
+      <div style="margin-top:15%; text-align:center;;">
+        <strong style="color:#0d6efd !important; font-size: xx-large;">TECHNICAL FACTORS</strong>
+        <br>
+        <img src="{% static 'technical.png' %}" style="width:50%"/>
+      </div> 
+    </div>
+    <div style="background-color: #f1f4f7;">
+      <div style="margin-top:15%; text-align:center;;">
+        <strong style="color:#adb5bd !important; font-size: xx-large;">LEGAL FACTORS</strong>
+        <br>
+        <img src="{% static 'law.png' %}" style="width:50%"/>
+      </div> 
+    </div>
+    <div style="background-color: #bee1c7;">
+      <div style="margin-top:15%; text-align:center;;">
+        <strong style="color:#198754 !important; font-size: x-large;">ENVIRONMENT</strong>
+        <strong style="color:#198754 !important; font-size: xx-large;">FACTORS</strong>
+        
+        <br>
+        <img src="{% static 'environment.png' %}" style="width:50%; margin-top: 8%;"/>
+      </div> 
+    </div>
+  </div>
+  
+  <div>
+    <p style="margin-top:2%; margin-left: 2%;"><strong style="color:#fa8321 !important; font-size:x-large; ">
+      LANGUAGE BARRIER IS THE GREATEST CHALLENGE FACED BY INCREDIBLE EATS IN SOUTH KOREA
+    </strong> </p>
+  </div>
+
+  <div>
+    <div style="height: 65px; padding-bottom: 25%; background-color: #ffc10740;" class="row">
       <div class="col-md-2">
         <button style="margin-top: 30%; margin-left: 3%" class="buttonP btn btn-warning btn-xl btn-circle">P</button>
       </div>
