--- a/company/templates/hofsted.html
+++ b/company/templates/hofsted.html
@@ -1,169 +1,457 @@
-{% extends "base.html" %}
- {% block content %}
-  {% load static %}
-  <style>
-    .ribbon{
-        font-size:20px;
-        position:relative;
-        display:inline-block;
-        text-align:center;
-      }
-      .text{
-        display:inline-block;
-        padding:0.5em 1em;
-        min-width:8em;
-        line-height:0.2em;
-        background: #fa8321;
-        position:relative;
-      }
-      .ribbon:after,.ribbon:before,
-      .text:before,.text:after,
-      .bold:before{
-        content:'';
-        position:absolute;
-        border-style:solid;
-      }
-      .ribbon:before{
-        top:0.3em; left:0.2em;
-        width:100%; height:100%;
-        border:none;
-        background:#EBECED;
-        z-index:-2;
-      }
-      .text:before{
-        bottom:100%; left:0;
-        border-width: .5em .7em 0 0;
-        border-color: transparent #fa8321 transparent transparent;
-      }
-      .text:after{
-        top:100%; right:0;
-        border-width: .5em 2em 0 0;
-        border-color: #fa8321 transparent transparent transparent;
-      }
-      .ribbon:after, .bold:before{
-        top:0.5em;right:-2em;
-        border-width: 0.6em 1em 0.6em 3em;
-        border-color: #fa8321 transparent #fa8321 #fa8321;
-        z-index:-1;
-      }
-      .bold:before{
-        border-color: #EBECED transparent #EBECED #EBECED;
-        top:0.7em;
-        right:-2.3em;
-      }
-      
-  </style>
-<div style="display: grid; grid-template-columns: 1fr 1fr; margin-top:6%; margin-left: 8%;">
-    <div style="margin-left: 5%;">
-        <table style="text-align:center;">
-            <tbody>
-           <tr>
-            <td>
-            <img src="{% static 'usa_flag.png' %}" style="height: 50%; width: 40%; 
-            margin-bottom: -2%;
-            margin-left: 40%;"/>
-            </td>
-           <tr>
-            <td>
-        <p class="ribbon">
-            <span class="text"><strong class="bold">USA</strong></span>
-          </p>
-            </td>
-           </tr>
-           <tr>
-            <td>
-                <div class="card" style="
+{% extends "base.html" %} {% block content %} {% load static %}
+<style>
+
+  .ribbon {
+    font-size: 20px;
+    position: relative;
+    display: inline-block;
+    text-align: center;
+  }
+  .text {
+    display: inline-block;
+    padding: 0.5em 1em;
+    min-width: 8em;
+    line-height: 0.2em;
+    background: #fa8321;
+    position: relative;
+  }
+  .ribbon:after,
+  .ribbon:before,
+  .text:before,
+  .text:after,
+  .bold:before {
+    content: "";
+    position: absolute;
+    border-style: solid;
+  }
+  .ribbon:before {
+    top: 0.3em;
+    left: 0.2em;
+    width: 100%;
+    height: 100%;
+    border: none;
+    background: #ebeced;
+    z-index: -2;
+  }
+  .text:before {
+    bottom: 100%;
+    left: 0;
+    border-width: 0.5em 0.7em 0 0;
+    border-color: transparent #fa8321 transparent transparent;
+  }
+  .text:after {
+    top: 100%;
+    right: 0;
+    border-width: 0.5em 2em 0 0;
+    border-color: #fa8321 transparent transparent transparent;
+  }
+  .ribbon:after,
+  .bold:before {
+    top: 0.5em;
+    right: -2em;
+    border-width: 0.6em 1em 0.6em 3em;
+    border-color: #fa8321 transparent #fa8321 #fa8321;
+    z-index: -1;
+  }
+  .bold:before {
+    border-color: #ebeced transparent #ebeced #ebeced;
+    top: 0.7em;
+    right: -2.3em;
+  }
+
+  .footer{
+    margin:-3%;
+    overflow-y: hidden;
+  }
+
+@import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,400italic|Montserrat:400,700);
+
+@mixin transition($transition-property, $transition-time, $method) {
+    -webkit-transition: $transition-property $transition-time $method;
+    -moz-transition: $transition-property $transition-time $method;
+    -ms-transition: $transition-property $transition-time $method;
+    -o-transition: $transition-property $transition-time $method;
+    transition: $transition-property $transition-time $method;
+}
+*{ box-sizing:border-box;}
+
+.holder{
+  width: 50%;
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+
+}
+
+.spantext{
+  -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    transform: rotate(270deg);
+}
+
+body {
+  color: #333;
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Montserrat', sans-serif;
+  padding: 2%;
+  overflow-y: hidden;
+ 
+}
+.wrap {
+  width: 50%;
+  margin-bottom: 10%;
+  margin-left: 40%;
+}
+h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bold;
+  text-align: center;
+  font-size: 1.5em;
+  padding: .5em 0;
+  margin-bottom: 1em;
+  border-bottom: 1px solid #dadada;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+}
+ul {
+ 	li {
+  		line-height: 2;
+   		font-weight: bold;
+  		font-family:'Montserrat', sans-serif;
+  		font-size: .85em;text-transform: uppercase;
+  		clear: both;
+		// border-bottom: 1px solid $border;
+		&:before {
+			content: "\2023";
+			padding: 0 1em 0 0;
+		}
+ 	}
+ }
+ .bar {
+ 	background:#e74c3c;
+ 	width: 0;
+ 	margin: .25em 0;
+ 	color: #fff;
+ 	position: relative;
+ 	 transition:width 2s, background .2s;
+   -webkit-transform: translate3d(0,0,0);
+ 	 clear: both;
+ 	 &:nth-of-type(2n) {
+ 	 	background:lighten(#e74c3c , 10% );
+ 	 }
+ 	 .label {
+		font-size: .75em;
+		padding: 1em;
+		width: 4em;
+    opacity: 0.5;
+		display: inline-block;
+		position: relative;
+		z-index: 2;
+		font-family: 'Montserrat', sans-serif;
+		 &.light {
+ 	 }
+
+}
+ }
+ .count {
+	position: absolute;
+	right: .25em;
+	top: .75em;
+ 	padding: .15em; 
+	font-size: .75em;
+	font-weight: bold;
+	font-family: 'Montserrat', sans-serif;
+ }
+</style>
+<div
+  style="
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 6%;
+    margin-left: 8%;
+  "
+>
+  <div style="margin-left: 5%">
+    <table style="text-align: center">
+      <tbody>
+        <tr>
+          <td>
+            <img
+              src="{% static 'usa_flag.png' %}"
+              style="
+                height: 50%;
+                width: 40%;
+                margin-bottom: -2%;
+                margin-left: 40%;
+              "
+            />
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <p class="ribbon">
+              <span class="text"><strong class="bold">USA</strong></span>
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div
+              class="card"
+              style="
                 z-index: -3;
                 margin-top: -5%;
                 margin-left: 25%;
-                width: 18rem;">
-                <div class="card-body">
-                    <div class="row">
-                      <div class="col-12 rounded-top" style="background-color: #f1aeb5; height: 50px;">
-                        <!-- Content for the first div -->
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-12" style="background-color: #9ec5fe; height: 50px;">
-                        <!-- Content for the second div -->
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-12" style="background-color: #f1aeb5; height: 50px;">
-                        <!-- Content for the third div -->
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-12" style="background-color: #9ec5fe; height: 50px;">
-                        <!-- Content for the fourth div -->
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col-12 rounded-bottom" style="background-color: #f1aeb5; height: 50px;">
-                        <!-- Content for the fifth div -->
-                      </div>
-                    </div>
+                width: 18rem;
+              "
+            >
+              <div class="card-body">
+                <div class="row">
+                  <div
+                    class="col-12 rounded-top"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the first div -->
                   </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #9ec5fe; height: 50px"
+                  >
+                    <!-- Content for the second div -->
                   </div>
-            </td>
-           </tr>
-           
-            </tbody>
-        </table>
-    </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the third div -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #9ec5fe; height: 50px"
+                  >
+                    <!-- Content for the fourth div -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12 rounded-bottom"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the fifth div -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
-    <div style="margin-top:15%">
-        <table style="text-align: left;">
-            <tbody>
-           <tr>
-            <td>
-            <img src="{% static 'korea_flag.png' %}" style="height: 50%; width: 40%; 
-            margin-bottom: -4%;
-            margin-left: 6%; transform: rotate(10deg);"/>
-            </td>
-           <tr>
-            <td>
-        <p class="ribbon">
-            <span class="text"><strong class="bold">South Korea</strong></span>
-          </p>
-            </td>
-           </tr>
-           <tr>
-            <td>
-                <div class="card" style="z-index: -3; margin-top: -4%; margin-left: -8%; width: 18rem;">
-                    <div class="card-body">
-                      <div class="row">
-                        <div class="col-12 rounded-top" style="background-color: #f1aeb5; height: 50px;">
-                          <!-- Content for the first div -->
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-12" style="background-color: #9ec5fe; height: 50px;">
-                          <!-- Content for the second div -->
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-12" style="background-color: #f1aeb5; height: 50px;">
-                          <!-- Content for the third div -->
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-12" style="background-color: #9ec5fe; height: 50px;">
-                          <!-- Content for the fourth div -->
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-12 rounded-bottom" style="background-color: #f1aeb5; height: 50px;">
-                          <!-- Content for the fifth div -->
-                        </div>
-                      </div>
-                    </div>
+  <div style="margin-top: 15%">
+    <table style="text-align: left">
+      <tbody>
+        <tr>
+          <td>
+            <img
+              src="{% static 'korea_flag.png' %}"
+              style="
+                height: 50%;
+                width: 40%;
+                margin-bottom: -4%;
+                margin-left: 6%;
+                transform: rotate(10deg);
+              "
+            />
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <p class="ribbon">
+              <span class="text"
+                ><strong class="bold">South Korea</strong></span
+              >
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div
+              class="card"
+              style="
+                z-index: -3;
+                margin-top: -4%;
+                margin-left: -8%;
+                width: 18rem;
+              "
+            >
+              <div class="card-body">
+                <div class="row">
+                  <div
+                    class="col-12 rounded-top"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the first div -->
                   </div>
-                  
-            </td>
-           </tr>
-            </tbody>
-        </table>
-    </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #9ec5fe; height: 50px"
+                  >
+                    <!-- Content for the second div -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the third div -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12"
+                    style="background-color: #9ec5fe; height: 50px"
+                  >
+                    <!-- Content for the fourth div -->
+                  </div>
+                </div>
+                <div class="row">
+                  <div
+                    class="col-12 rounded-bottom"
+                    style="background-color: #f1aeb5; height: 50px"
+                  >
+                    <!-- Content for the fifth div -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
+
+<div>
+  <div class="wrap">
+    <div class="holder">
+      <!-- POWER DISTANCE -->
+        <div class="bar cf" data-percent="40%" style="background:red">
+          <span class="label" >USA</span>
+        </div>
+        <div class="bar cf" data-percent="60%" style="background:green;margin-bottom: 10%;">
+          <span class="label light" >SKorea</span>
+        </div>
+      <!-- Individualism -->
+      
+      <div class="bar cf" data-percent="60%" style="background:red">
+        <span class="label">USA</span>
+      </div>
+      <div class="bar cf" data-percent="18%" style="background:green;margin-bottom: 10%;">
+        <span class="label light">SKorea</span>
+      </div>
+      <!--masculine vs feminine-->
+      <div class="bar cf" data-percent="62%" style="background:red">
+        <span class="label">USA</span>
+      </div>
+      <div class="bar cf" data-percent="39%" style="background:green;margin-bottom: 10%;">
+        <span class="label light">SKorea</span>
+      </div>
+      <!-- Uncertainity Avoidance -->
+      <div class="bar cf" data-percent="46%" style="background:red">
+        <span class="label light">USA</span>
+      </div>
+      <div class="bar cf" data-percent="85%" style="background:green;margin-bottom: 10%;">
+        <span class="label">SKorea</span>
+      </div>
+      <!-- Short term vs long term perspective -->
+      <div class="bar cf" data-percent="50%" style="background:red">
+        <span class="label light">USA</span>
+      </div>
+      <div class="bar cf" data-percent="100%"style="background:green;margin-bottom: 10%;">
+        <span class="label">SKorea</span>
+      </div>
+      <!-- Indulgance -->
+      <div class="bar cf" data-percent="68%" style="background:red">
+        <span class="label light">USA</span>
+      </div>
+      <div class="bar cf" data-percent="29%"style="background:green;margin-bottom: 10%;">
+        <span class="label">SKorea</span>
+      </div>
+    </div>
+    <div style="color:black !important; position: relative;
+    z-index: 2;margin-top: -35%; margin-left:-30%; font-size: small;">Power Distance &nbsp; &nbsp; &emsp; Individualism
+  <font style="font-size: smaller; color:black !important">&nbsp; &nbsp; &emsp; &emsp; Masculine vs Feminine  &nbsp; &emsp;Uncertainity Avoidance
+    &nbsp; &emsp; Short vs Long term</font>
+    &nbsp; &nbsp; &emsp; Indulgance
+
+</div>
+  </div>
+
+</div>
+</div>
+
+<script>
+  $(document).ready(function() {
+    function startAnimationIfVisible() {
+      $('.bar').each(function(i) {
+        var $bar = $(this);
+        if (isElementInViewport($bar[0]) && !$bar.data('animation-started')) {
+          $bar.data('animation-started', true);
+          $bar.append('<span class="count">0%</span>');
+          setTimeout(function() {
+            $bar.css('width', $bar.attr('data-percent'));
+          }, i * 100);
+        }
+      });
+  
+      $('.count').each(function() {
+        var $count = $(this);
+        var $bar = $count.closest('.bar');
+        if (isElementInViewport($bar[0]) && !$bar.data('count-animation-started')) {
+          $bar.data('count-animation-started', true);
+          $count.prop('Counter', 0).animate({
+            Counter: $bar.attr('data-percent')
+          }, {
+            duration: 500,
+            easing: 'swing',
+            step: function(now) {
+              $count.text(Math.ceil(now) + '%');
+            }
+          });
+        }
+      });
+    }
+  
+    function isElementInViewport(el) {
+      var rect = el.getBoundingClientRect();
+      return (
+        rect.top >= 0 &&
+        rect.left >= 0 &&
+        rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+        rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+      );
+    }
+  
+    startAnimationIfVisible();
+    $(window).on('scroll', startAnimationIfVisible);
+  });
+  
+  
+</script>
 {% endblock %}
