--- a/company/templates/base.html
+++ b/company/templates/base.html
@@ -11,6 +11,17 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      href="https://cdn.lineicons.com/1.0.1/LineIcons.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
+
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css"
+      rel="stylesheet"
+      crossorigin="anonymous"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -105,6 +116,9 @@
               <li class="nav-item">
                 <a class="nav-link {% if request.path == request.resolver_match.url_name and request.resolver_match.url_name == 'hofsted_view' %}nav-link-active{% endif %}" href="{% url 'hofsted_view' %}">Hofsted</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == request.resolver_match.url_name and request.resolver_match.url_name == 'competitive_view' %}nav-link-active{% endif %}" href="{% url 'competitive_view' %}">Competitiveness</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -151,7 +165,7 @@
       <li class="li"><a href="{% url 'index' %}">About</a></li>
       <li class="li"><a href="{% url 'pestle_view' %}">PESTLE Analysis</a></li>
       <li class="li"><a href="{% url 'hofsted_view' %}">Hofsted Analysis</a></li>
-      <li class="li">About</li>
+      <li class="li"><a href="{% url 'competitive_view' %}">Competitiveness Analysis</a></li>
       <li class="li">About</li>
       <li class="li">About</li>
     </ul>
